--- a/.github/workflows/staging.yaml
+++ b/.github/workflows/staging.yaml
@@ -94,8 +94,8 @@ jobs:
         with:
           context: .
           push: true
-          platforms: linux/amd64
+          platforms: linux/amd64,linux/arm64
           tags: ${{ steps.meta.outputs.tags }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
-          load: true
+          load: false
