replacing init timeout container by proper healthcheck

--- a/.env.development
+++ b/.env.development
@@ -1,4 +1,4 @@
-NODE_ENV="production"
+NODE_ENV="development"
 KEYCLOAK_CERTS_URL="http://localhost:8080/realms/koovea/protocol/openid-connect/certs"
 KEYCLOAK_ISSUER="http://localhost:8080/realms/koovea"
 KEYCLOAK_AUDIENCE="koovea-task-manager-api"
