--- a/.env.docker.koovea-api.development
+++ b/.env.docker.koovea-api.development
@@ -1,8 +1,7 @@
 NODE_ENV="production"
-KEYCLOAK_CERTS_URL="http://localhost:8080/realms/koovea/protocol/openid-connect/certs"
+KEYCLOAK_CERTS_URL="http://keycloak:8080/realms/koovea/protocol/openid-connect/certs"
 KEYCLOAK_ISSUER="http://localhost:8080/realms/koovea"
 KEYCLOAK_AUDIENCE="koovea-task-manager-api"
-# MONGO
 MONGO_URI="mongodb://koovea-data-admin:8C4PkW9kukHZ@mongo:27017/koovea-task-manager"
 SWAGGER_BASIC_AUTH_PASSWORD="1lO4Ko3pbZI1"
 SWAGGER_BASIC_AUTH_USERNAME="swagger"
